--- a/_posts/2018-4-17-服务初步配置.md
+++ b/_posts/2018-4-17-服务初步配置.md
@@ -3,11 +3,11 @@ layout:     post
 title:      centos 7 服务器初步配置
 subtitle:   zsh,Oh-My-Zsh,git服务器搭建
 date:       2018-04-17
-author:     sq
+author:     siqing
 header-img: img/post-bg-debug.png
 catalog: true
 tags:
-    - ubuntu
+    - centos
     - git
     - linux
 ---
